<resources>
    <string name="app_name">LoginDemo</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="number_of_attempts">Number of attempts</string>
    <string name="password">Password</string>
    <string name="view_calendar">View Calendar</string>
    <string name="view_google_map">View Google Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_google_web">View Google Web</string>
    <string name="username">Username</string>
    <string name="kg_pound"><![CDATA[Kg <=> Pound]]></string>
    <string name="mile_km"><![CDATA[Mile <=> Km]]></string>
    <string name="celcius_fahrenheit"><![CDATA[Celcius <=> Fahrenheit]]></string>
    <string name="meter_feet"><![CDATA[Meter <=> Feet]]></string>
    <string name="mile">Mile</string>
    <string name="km">Km</string>
    <string name="kilometer">kilometer</string>
    <string name="foot_to_metre">Foot To Metre</string>
    <string name="mile_to_km">Mile to Km</string>
    <string name="c_to_f">C to F</string>
    <string name="pound_to_kg">Pound To Kg</string>
    <string name="km_to_mile">Km to Mile</string>
</resources>
